--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -18,18 +18,20 @@ insert_final_newline = false
 #### .NET Coding Conventions ####
 
 # Organize usings
-dotnet_separate_import_directive_groups = true:warning
-dotnet_sort_system_directives_first = true:warning
+# This is commented out because of the below bug
+# Bug: https://github.com/dotnet/roslyn/issues/38504#issuecomment-528766550
+# dotnet_sort_system_directives_first = true:warning
+# dotnet_separate_import_directive_groups = true:warning
 
 # this. and Me. preferences
-dotnet_style_qualification_for_event = true:suggestion
-dotnet_style_qualification_for_field = true:suggestion
-dotnet_style_qualification_for_method = true:suggestion
-dotnet_style_qualification_for_property = true:suggestion
+dotnet_style_qualification_for_event = true:warning
+dotnet_style_qualification_for_field = true:warning
+dotnet_style_qualification_for_method = true:warning
+dotnet_style_qualification_for_property = true:warning
 
 # Language keywords vs BCL types preferences
-dotnet_style_predefined_type_for_locals_parameters_members = true:warning
-dotnet_style_predefined_type_for_member_access = true:warning
+dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
+dotnet_style_predefined_type_for_member_access = true:suggestion
 
 # Parentheses preferences
 dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:silent
@@ -42,10 +44,10 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:warning
 
 # Expression-level preferences
 dotnet_style_coalesce_expression = true:suggestion
-dotnet_style_collection_initializer = true:silent
+dotnet_style_collection_initializer = true:none
 dotnet_style_explicit_tuple_names = true:silent
 dotnet_style_null_propagation = true:suggestion
-dotnet_style_object_initializer = true:silent
+dotnet_style_object_initializer = true:none
 dotnet_style_prefer_auto_properties = true:silent
 dotnet_style_prefer_compound_assignment = true:silent
 dotnet_style_prefer_conditional_expression_over_assignment = true:silent
@@ -65,7 +67,7 @@ dotnet_code_quality_unused_parameters = all:suggestion
 # var preferences
 csharp_style_var_elsewhere = false:warning
 csharp_style_var_for_built_in_types = false:warning
-csharp_style_var_when_type_is_apparent = false:warning
+csharp_style_var_when_type_is_apparent = false:none
 
 # Expression-bodied members
 csharp_style_expression_bodied_accessors = true:silent
